--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,7 @@ body {
 }
 
 .Navbar .logo {
+    width: 25%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -47,9 +48,10 @@ body {
 
 .nav-menu {
     display: flex;
-    width: 60%;
+    width: 50%;
     justify-content: space-evenly;
     align-items: center;
+
 }
 
 .nav-menu .nav-item {
@@ -81,5 +83,26 @@ body {
 
 .nav-menu .nav-item:hover::after {
     width: 100%;
+}
 
+.login-button {
+    padding: 10px 15px;
+}
+
+.login-button li {
+    list-style: none;
+}
+
+.login-button li a {
+    text-decoration: none;
+    font-size: 15px;
+    padding: 10px 18px;
+    border: 2px solid #fff;
+    border-radius: 10px;
+    color: #fff;
+}
+
+.login-button li a:hover {
+    background-color: #fff;
+    color: #000;
 }
