--- a/src/App.css
+++ b/src/App.css
@@ -227,3 +227,70 @@ body {
     font-weight: 600;
     margin: 10px 0 20px;
 }
+
+#top_product h2 {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+#top_product .box_top {
+    display: flex;
+    gap: 5px;
+}
+
+.box_top .box_view {
+    width: 10%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+}
+
+.box_top .box_view .card_product {
+    border-radius: 10px;
+    height: 100px;
+    width: 75%;
+    background-color: #fff;
+}
+
+.box_top .box_view .card_product img {
+    border-radius: 10px;
+    height: 100px;
+    display: block;
+    margin: auto;
+}
+
+.box_top .box_preview {
+    border-radius: 10px;
+    position: relative;
+    width: 45%;
+    height: auto;
+    background-color: #fff;
+}
+
+.box_top .box_preview img {
+    border-radius: 10px;
+    width: 100%;
+    height: auto;
+    display: block;
+    margin: auto;
+}
+
+
+.box_top .box_deskripsi {
+    width: 45%;
+    height: auto;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+}
+
+.box_top .box_deskripsi .box_text {
+    width: 80%;
+    margin: auto;
+}
+
+.box_deskripsi .box_text h4 {
+    margin: 20px 0;
+}
