--- a/src/App.css
+++ b/src/App.css
@@ -113,7 +113,7 @@ body {
     width: 100%;
     box-sizing: border-box;
     overflow: hidden;
-    padding: 60px 0;
+    padding: 60px 0 0 0;
 }
 
 #about {
@@ -294,4 +294,42 @@ body {
 
 .box_deskripsi .box_text h4 {
     margin: 20px 0;
+}
+
+footer {
+    background-color: #fff;
+    height: auto;
+    width: 100%;
+}
+
+footer .container {
+    display: flex;
+    margin-top: 50px;
+    justify-content: center;
+    gap: 10px;
+}
+
+footer .footer {
+    margin: 20px 0;
+    width: 30%;
+    height: 200px;
+}
+
+footer .footer img {
+    height: 60px;
+    margin-bottom: 15px;
+}
+
+footer .footer h3 {
+    text-align: center;
+    font-size: 18px;
+}
+
+.footer p a {
+    display: flex;
+    justify-content: center;
+    text-decoration: none;
+    margin: 20px 0px;
+    font-weight: 600;
+    color: #494949;
 }
