--- a/src/App.css
+++ b/src/App.css
@@ -320,6 +320,10 @@ footer .footer img {
     margin-bottom: 15px;
 }
 
+footer .footer .deskripsi_footer {
+    color: #6f6f6f;
+}
+
 footer .footer h3 {
     text-align: center;
     font-size: 18px;
@@ -332,4 +336,31 @@ footer .footer h3 {
     margin: 20px 0px;
     font-weight: 600;
     color: #494949;
+}
+
+.footer ul {
+    display: flex;
+    justify-content: center;
+    margin: 20px 0px;
+}
+
+.footer ul li {
+    list-style: none;
+    margin: 0px 10px;
+    border: 1px solid #6f6f6f;
+    padding: 8px 10px;
+    border-radius: 100px;
+}
+
+.footer ul li .footer_icon {
+    font-size: 20px;
+    color: #6f6f6f;
+}
+
+footer .copyright {
+    text-align: center;
+    padding: 10px 0;
+    background-color: #6f6f6f;
+    color: #fff;
+    font-weight: 700;
 }
