--- a/src/App.css
+++ b/src/App.css
@@ -575,3 +575,85 @@ footer .copyright {
     }
 
 }
+
+/* Tablet Responsive */
+@media screen and (max-width:900px) {
+    .main-header {
+        height: 35vh;
+        background-size: contain;
+    }
+
+    #about {
+        flex-direction: column;
+        padding: 0;
+    }
+
+    .box-image {
+        width: 100%;
+    }
+
+    .box-image img {
+        height: 400px;
+        transition: transform 0.5s ease-in-out;
+    }
+
+    .box-deskripsi {
+        width: 100%;
+    }
+
+    .box-deskripsi h2 {
+        margin: 20px 0px;
+    }
+
+    .box-deskripsi p {
+        margin: 10px 0px;
+    }
+
+    #product .box-product .card {
+        width: 45%;
+        transition: transform 0.5s ease-in-out;
+    }
+
+    #top_product .box_top {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .box_top .box_view {
+        order: 2;
+        overflow-x: scroll;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 20px;
+    }
+
+    .box_top .box_preview {
+        margin-bottom: 10px;
+        order: 1;
+        width: 100%;
+    }
+
+    .box_top .box_deskripsi {
+        padding: 20px 0;
+        order: 3;
+        width: 100%;
+    }
+
+    .box_top .box_deskripsi .box_text {
+        width: 80%;
+        margin: auto;
+    }
+
+    .box_deskripsi .box_text h4 {
+        margin: 20px 0;
+    }
+
+    footer .footer {
+        margin: 20px 0;
+        width: 30%;
+        height: 250px;
+    }
+
+
+}
